# ootle-wallet-cli

./: .gitignore  Cargo.toml  LOGGING.md  README.md  transfer.ps1  transfer.sh
src/: keys.rs  macros.rs  main.rs  prompt.rs  spinner.rs  store.rs  table.rs  transfer.rs  wallet.rs
src/models/: balance.rs  mod.rs
src/tapplets/: default_registries.rs  fetch.rs  install.rs  list.rs  mod.rs  run.rs  search.rs
