[package]
name = "ootle-wallet-cli"
version = "0.1.0"
edition = "2024"
authors = ["The Tari Project"]
description = "Ootle Wallet Command Line Interface"
license = "BSD-3-Clause"

[dependencies]
tari_ootle_wallet_sdk = { git = "https://github.com/tari-project/tari-ootle.git", branch = "development" }
tari_ootle_wallet_sdk_services = { git = "https://github.com/tari-project/tari-ootle.git", branch = "development", features = [
    "indexer_client",
] }
tari_ootle_wallet_storage_sqlite = { git = "https://github.com/tari-project/tari-ootle.git", branch = "development" }
tari_template_lib_types = { git = "https://github.com/tari-project/tari-ootle.git", branch = "development" }
tari_ootle_common_types = { git = "https://github.com/tari-project/tari-ootle.git", branch = "development" }
tari_engine_types = { git = "https://github.com/tari-project/tari-ootle.git", branch = "development" }
tari_transaction = { git = "https://github.com/tari-project/tari-ootle.git", branch = "development" }

#tari_ootle_wallet_sdk = { path = "../dan/crates/wallet/sdk" }
#tari_ootle_wallet_sdk_services = { path = "../dan/crates/wallet/sdk_services", features = ["indexer_client"] }
#tari_ootle_wallet_storage_sqlite = { path = "../dan/crates/wallet/storage_sqlite" }
#tari_template_lib_types = { path = "../dan/crates/template_lib_types" }
#tari_ootle_common_types = { path = "../dan/crates/common_types" }
#tari_engine_types = { path = "../dan/crates/engine_types" }
#tari_transaction = { path = "../dan/crates/transaction" }

tari_crypto = { version = "0.22.1", features = ["std"] }

anyhow = "1.0.100"
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.28"
clap = { version = "4.5.48", features = ["derive"] }
tokio = { version = "1.47.1", features = [
    "macros",
    "rt-multi-thread",
    "process",
] }
url = "2.5.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
spinners = "4.1.1"
termimad = "0.34.0"
rand = "0.8"
zeroize = "1.8.2"
toml = "0.8"
hex = "0.4.3"
blake2 = "0.10.6"
[[bin]]
name = "ootle"
path = "src/main.rs"
