[package]
name = "ootle-wallet-cli"
version = "0.1.0"
edition = "2024"
authors = ["The Tari Project"]
description = "Ootle Wallet Command Line Interface"
license = "BSD-3-Clause"

[dependencies]
ootle-rs = { git = "https://github.com/tari-project/tari-ootle.git", tag = "v0.33.4" }
tari_template_lib_types = { git = "https://github.com/tari-project/tari-ootle.git", tag = "v0.33.4" }
tari_ootle_common_types = { git = "https://github.com/tari-project/tari-ootle.git", tag = "v0.33.4" }

#ootle-rs = { path = "../dan/crates/wallet/ootle-rs" }
#tari_template_lib_types = { path = "../dan/crates/template_lib_types" }
#tari_ootle_common_types = { path = "../dan/crates/common_types" }

tari_crypto = { version = "0.23", features = ["std"] }
tari_common_types = "5.4.0-pre.3"

anyhow = "1.0.100"
env_logger = "0.11.8"
log = "0.4.28"
clap = { version = "4.5.48", features = ["derive", "env"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
url = "2.5.7"
rpassword = "7.4"
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
spinners = "4.1.1"
termimad = "0.34.0"
zeroize = "1.8.2"

[[bin]]
name = "ootle"
path = "src/main.rs"
